Make sure footer links aren't hidden by the "chat bubble"

--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,12 @@ footer a { font-weight: bold; color: #252525; margin: 0 .5em; }
 	footer span { display: none; }
 }
 
+/* TODO: bit of a temporary solution to make sure all links are visible with the
+ * "chat bubble" from intergram. I'd like to redesign that entire thing, but ...
+ * right now also a lot of other stuff to do, so this will have to do. */
+footer                   { display: block; }
+footer > div:first-child { margin-bottom: 1em; }
+
 .page { position: relative; }
 
 /*** Home page ***/
